log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:28:03 PM UTC 2026: 
 graph.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|6
========================================
2c944d3
Thu May 14 08:29:27 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
049b67c
Thu May 14 08:36:40 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
13cb6f8
Thu May 14 08:37:03 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
1db4980
Fri May 15 08:29:27 PM UTC 2026: 
 tests:  1|5
========================================
ddfb2a2
Fri May 15 08:45:21 PM UTC 2026: 
 graph.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  1|5
========================================
b1aa23b
Fri May 15 08:48:52 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
3a1ce98
Fri May 15 08:51:14 PM UTC 2026: 
 graph.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
de0b582
Fri May 15 08:56:37 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
e1c2f94
Fri May 15 09:03:51 PM UTC 2026: 
 graph.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
c75d21d
Fri May 15 10:51:21 PM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:51: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   40 |     MapPair *node = map_search(g -> adjacencyMap, label);
      |                                                   ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:43:39: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   43 |     if (map_search(g -> adjacencyMap, label) != NULL) return;
      |                                       ^~~~~
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:44:29: error: implicit declaration of function ‘create_list’ [-Wimplicit-function-declaration]
   44 |     List *listaConexiones = create_list();
      |                             ^~~~~~~~~~~
graph.c:44:29: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:45:35: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   45 |     map_insert(g -> adjacencyMap, label, listaConexiones);
      |                                   ^~~~~
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
graph.c:40:14: error: unused variable ‘node’ [-Werror=unused-variable]
   40 |     MapPair *node = map_search(g -> adjacencyMap, label);
      |              ^~~~
cc1: all warnings being treated as errors
fb8afd2
Fri May 15 10:53:51 PM UTC 2026: 
 graph.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:44:39: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   44 |     if (map_search(g -> adjacencyMap, label) != NULL) return;
      |                                       ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:46:35: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   46 |     map_insert(g -> adjacencyMap, label, listaConexiones);
      |                                   ^~~~~
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
cc1: all warnings being treated as errors
88a0a43
Fri May 15 10:54:36 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9ea0518
Fri May 15 11:01:03 PM UTC 2026: 
 graph.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:44:39: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   44 |     if (map_search(g -> adjacencyMap, label) != NULL) return;
      |                                       ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:46:35: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   46 |     map_insert(g -> adjacencyMap, label, listaConexiones);
      |                                   ^~~~~
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
cc1: all warnings being treated as errors
3ad59e1
Fri May 15 11:06:00 PM UTC 2026: 
 graph.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:41:46: error: ‘text’ undeclared (first use in this function)
   41 |     if (map_search(g -> adjacencyMap, (void*)text) != NULL) return;
      |                                              ^~~~
graph.c:41:46: note: each undeclared identifier is reported only once for each function it appears in
graph.c:45:5: error: statement with no effect [-Werror=unused-value]
   45 |     strcmp(text, label);
      |     ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
c30d6fa
Fri May 15 11:06:53 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:45:5: error: statement with no effect [-Werror=unused-value]
   45 |     strcmp(text, label);
      |     ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
c44a4c3
Fri May 15 11:09:34 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2252624
Sun May 17 04:00:36 AM UTC 2026: 
 graph.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:60:31: error: implicit declaration of function ‘sizseof’ [-Wimplicit-function-declaration]
   60 |         Edge *arista = malloc(sizseof(Edge));
      |                               ^~~~~~~
graph.c:60:39: error: expected expression before ‘Edge’
   60 |         Edge *arista = malloc(sizseof(Edge));
      |                                       ^~~~
c12c774
Sun May 17 04:01:06 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
820d130
Sun May 17 04:03:53 AM UTC 2026: 
 graph.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
594c067
Sun May 17 04:08:37 AM UTC 2026: 
 tests:  12|0
========================================
b4d6e69
Sun May 17 03:17:33 PM UTC 2026: 
 graph.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getAdjacentLabels’:
graph.c:113:64: error: ‘label1’ undeclared (first use in this function); did you mean ‘label’?
  113 |     MapPair *nodoOrigen = map_search(g -> adjacencyMap, (void*)label1);
      |                                                                ^~~~~~
      |                                                                label
graph.c:113:64: note: each undeclared identifier is reported only once for each function it appears in
3741775
Sun May 17 03:17:57 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
1846a18
